--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@nextui-org/button": "^2.0.38",
+    "@nextui-org/card": "^2.0.34",
     "@nextui-org/system": "^2.2.6",
     "@nextui-org/tabs": "^2.0.37",
     "@nextui-org/theme": "^2.2.11",
